# helloworld-confidential-client-sof

./: .gitignore  Dockerfile  README.md  commands.sh  confidential_backend.env.default  docker-compose.yaml  logging.ini  messaging-crontab  messaging.env.default  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build-deliver.yaml  test.yaml
confidential_backend/: __init__.py  app.py  audit.py  cachelaunchresponse.py  celery_utils.py  config.py  dynamic_factory.py  extensions.py  fhirresourcelogger.py  jsonify_abort.py  muli_fhir.py  multi_fhir.py  scope.py  secondary_fhir_strategy.py  source_strategy.py  wrapped_session.py  wsgi.py
confidential_backend/api/: __init__.py  external_fhir.py  fhir.py  views.py
confidential_backend/auth/: __init__.py  helpers.py  jwk_manager.py  views.py
confidential_backend/source_strategies/: secondary_fhir_strategy.py  source_strategy.py
isacc_messaging/: app.py  audit.py  config.py  extensions.py  jsonify_abort.py  wsgi.py
isacc_messaging/api/: __init__.py  fhir.py  isacc_record_creator.py  views.py
isacc_messaging/auth/: __init__.py  views.py
src/: app.py  audit.py  logserverhandler.py
src/api/: __init__.py  fhir.py  views.py
src/auth/: __init__.py  views.py
tests/: conftest.py  test_audit.py  test_auth.py  test_diff_patient_ids.py  test_multi_fhir.py  test_scopes.py
