# setup.py configuration file
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = confidential_backend

[options]
packages = confidential_backend
zip_safe = False
include_package_data = True

# abstract requirements;
# concrete requirements belong in requirements.txt
# https://caremad.io/posts/2013/07/setup-vs-requirement/
install_requires =
    authlib==0.14.3
    cachelib==0.1.1
    certifi==2021.5.30
    cffi==1.14.1
    charset-normalizer==2.0.6
    click==8.0.1
    cryptography==3.3.2
    ecdsa==0.14.1
    flask-cors==3.0.10
    flask-session==0.4.1
    flask==1.1.2
    gunicorn==20.1.0
    idna==3.2
    importlib-metadata==4.8.1
    itsdangerous==2.0.1
    jinja2==3.0.1
    markupsafe==2.0.1
    pyasn1==0.4.8
    pycparser==2.20
    python-jose[cryptography]==3.2.0
    python-json-logger==0.1.11
    redis==3.5.3
    requests-cache==0.6.4
    requests==2.26.0
    rsa==4.7
    six==1.16.0
    typing-extensions==3.10.0.2
    url-normalize==1.4.3
    urllib3==1.26.7
    werkzeug==2.0.1
    zipp==3.5.0

[options.extras_require]
dev =

    attrs==21.2.0
    importlib-metadata==4.8.1
    iniconfig==1.1.1
    mirakuru==2.4.1
    packaging==21.0
    pluggy==1.0.0
    port-for==0.6.1
    psutil==5.8.0
    py==1.10.0
    pyparsing==2.4.7
    pytest-mock==3.6.1
    pytest-redis==2.1.1
    pytest==6.2.5
    requests-mock==1.9.3
    toml==0.10.2
    typing-extensions==3.10.0.2
    zipp==3.5.0

[tool:pytest]
addopts = --color yes --verbose
console_output_style = classic
filterwarnings =
    # only print each warning once per module
    module

    # error on bad assertions
    error:.*assertion is always true.*
