# setup.py configuration file
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = confidential_backend

[options]
packages = confidential_backend
zip_safe = False
include_package_data = True

# abstract requirements;
# concrete requirements belong in requirements.txt
# https://caremad.io/posts/2013/07/setup-vs-requirement/
install_requires =
    authlib==1.6.4
    cachelib==0.1.1
    flask-cors==4.0.1
    flask-session==0.4.1
    flask==1.1.2
    gunicorn==20.1.0
    itsdangerous==2.0.1
    jinja2==3.0.1
    python-jose[cryptography]==3.2.0
    python-json-logger==0.1.11
    redis==3.5.3
    requests-cache==0.6.4
    requests==2.26.0
    werkzeug==2.0.1

[options.extras_require]
dev =
    pytest-mock==3.6.1
    pytest-redis==2.1.1
    pytest==6.2.5
    requests-mock==1.9.3

[tool:pytest]
addopts = --color yes --verbose
console_output_style = classic
filterwarnings =
    # only print each warning once per module
    module

    # error on bad assertions
    error:.*assertion is always true.*
